--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "request": "^2.85.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue-star-rating": "^1.5.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
